--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <!--<link rel="stylesheet" href="/css/syntax.css">-->
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/"+{{ site.baseurl }}+"/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
 
 <body>
