--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,15 @@
 <body>
 	<div class="site">
 		<div class="header">
-			<h1 class="title"><a href="/">{{ site.name }}</a></h1>
-			<a class="extra" href="/">home</a>
+			<h1 class="title"><a href="{{site.baseurl}}/index.html">{{ site.name }}</a></h1>
+			<a class="extra" href="{{site.baseurl}}/index.html">home</a>
 		</div>
 
 		{{content}}
 
 		<div class="footer">
 			<div class="contact">
-				<p>Name</p>
+				<h2>My Name</h2>
 			</div>
 			<div class="contact">
 				<p>
