--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -368,7 +368,9 @@ hr {
     background: #f67c5f; }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
-    background: #f65e3b; }
+    /*background: #f65e3b;*/ 
+    background-image: url(../miao.png);
+  }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
