--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <META http-equiv=Page-Enter content=revealTrans(Transition=2,Duration=6.0)>
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width,user-scalable=no">
 
         <!-- syntax highlighting CSS -->
         <!--<link rel="stylesheet" href="/css/syntax.css">-->
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-	<div class="site">
+	<section class="body" id="body">
 		<div class="header">
 			<h1 class="title"><a href="{{site.baseurl}}/index.html">{{ site.name }}</a></h1>
 			<a class="extra" href="{{site.baseurl}}/index.html">home</a>
