--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,7 +23,8 @@ body{
 	top: 0;bottom: 0;
 	width: 60%;
 	max-width: 250px;
-	background: #F1103A;
+	/*background: #F1103A;*/
+	background-image: url("/blog/res/bg.jpg");background-repeat: repeat-x;
 	/*transition:0.2s ease-out; -webkit-transition:0.2s ease-out;*/
 	transition:-webkit-transform 0.2s ease-out;
 	-webkit-transform: translate3d(-100%, 0, 0);
