--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <META http-equiv=Page-Enter content=revealTrans(Transition=2,Duration=6.0)>
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <META http-equiv=Page-Enter content=revealTrans(Transition=2,Duration=6.0)>
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width,user-scalable=no">
 
-        <!-- syntax highlighting CSS -->
-        <!--<link rel="stylesheet" href="/css/syntax.css">-->
+    <!-- syntax highlighting CSS -->
+    <!--<link rel="stylesheet" href="/css/syntax.css">-->
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
 
 <body>
@@ -33,6 +33,18 @@
 				</p>
 			</div>
 		</div>
-	</div>
+	</section>
+	<div id="disqus_thread"></div>
+	<script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'orangetangerine'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
 </body>
 </html>
