--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,13 @@ a:visited { color: #a0a; }
   width: 42em;
   margin: 3em auto 2em;
   line-height: 1.5em;
+  max-width: 90%;
+}
+
+#disqus_thread{
+  width: 42em;
+  margin: 3em auto 2em;
+  max-width: 90%;
 }
 
 .header a {
